Expand webmockserver test fixture